# pace-earthcare-matchups

./: .gitignore  README.md  pyproject.toml
notebooks/: maap_search.md  tutorial.md
src/pace_earthcare_matchups/: earthcare.py  geospatial_utils.py  matchup.py  metadata_utils.py  pace.py  path_utils.py  plotting.py  supported_products.py
