[project]
version = "0.1.0"
name = "pace_earthcare_matchups"
authors = [{ name = "Sean Foley", email = "sean.r.foley@nasa.gov" }]
dependencies = [
    "cartopy",
    "h5py",
    "maap",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pystac",
    "pystac_client",
    "seaborn",
    "shapely",
    "tqdm",
]

[project.optional-dependencies]
# packages required for maintainers
maintainer = [
  "jupytext",
]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
ignore = []
exclude = ["data"]

[tool.ruff]
exclude = [
  ".git",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".ruff_cache",
  ".vscode",
  "*.ipynb",
  "data",
]
