[project]
version = "0.1.0"
name = "pace_earthcare_matchups"
authors = [{ name = "Sean Foley", email = "sean.r.foley@nasa.gov" }]
dependencies = [
    "cartopy",
    "earthaccess",
    "h5py",
    "jupyter",
    "jupytext",
    "maap-py",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pystac",
    "pystac_client",
    "scipy",
    "seaborn",
    "shapely",
    "tqdm",
]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
ignore = []
exclude = [
  "data",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
]

[tool.ruff]
exclude = [
  ".git",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".ruff_cache",
  ".vscode",
  "*.ipynb",
  "data",
]
